add correct link to github generation

--- a/Extra/Data/create_triplets.ipynb
+++ b/Extra/Data/create_triplets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "40a51d8f-38fc-45a5-aec7-0d9d55d7772e",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "5293c6cc-3111-4ea1-8178-caf026c7ce18",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 5,
    "id": "fc5930ef-0c7d-4489-b763-76b698aaf773",
    "metadata": {},
    "outputs": [
@@ -58,41 +58,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   image1_title  image1_label                       image1_url  image2_title  \\\n",
-      "0  ISIC_0013490           1.0  https://github.com/ISIC_0013490  ISIC_5366635   \n",
-      "1  ISIC_0010025           0.0  https://github.com/ISIC_0010025  ISIC_3542273   \n",
-      "2  ISIC_0013567           1.0  https://github.com/ISIC_0013567  ISIC_9579703   \n",
-      "3  ISIC_0011230           0.0  https://github.com/ISIC_0011230  ISIC_7035246   \n",
-      "4  ISIC_0009919           0.0  https://github.com/ISIC_0009919  ISIC_3738751   \n",
-      "5  ISIC_0010015           0.0  https://github.com/ISIC_0010015  ISIC_1109641   \n",
-      "6  ISIC_0013685           0.0  https://github.com/ISIC_0013685  ISIC_9472515   \n",
-      "7  ISIC_0000409           0.0  https://github.com/ISIC_0000409  ISIC_5332605   \n",
-      "8  ISIC_0000300           1.0  https://github.com/ISIC_0000300  ISIC_5581297   \n",
-      "9  ISIC_0013815           1.0  https://github.com/ISIC_0013815  ISIC_0632512   \n",
+      "   image1_title  image1_label  \\\n",
+      "0  ISIC_0014249           1.0   \n",
+      "1  ISIC_0010267           1.0   \n",
+      "2  ISIC_0015233           0.0   \n",
+      "3  ISIC_0012250           0.0   \n",
+      "4  ISIC_0010360           1.0   \n",
+      "5  ISIC_0013497           1.0   \n",
+      "6  ISIC_0010000           1.0   \n",
+      "7  ISIC_0014189           1.0   \n",
+      "8  ISIC_0013772           0.0   \n",
+      "9  ISIC_0000511           1.0   \n",
       "\n",
-      "   image2_label                       image2_url  image3_title  image3_label  \\\n",
-      "0             0  https://github.com/ISIC_5366635  ISIC_4329544             0   \n",
-      "1             0  https://github.com/ISIC_3542273  ISIC_8609756             1   \n",
-      "2             1  https://github.com/ISIC_9579703  ISIC_4508878             1   \n",
-      "3             1  https://github.com/ISIC_7035246  ISIC_6613150             1   \n",
-      "4             1  https://github.com/ISIC_3738751  ISIC_8806647             0   \n",
-      "5             0  https://github.com/ISIC_1109641  ISIC_4946006             0   \n",
-      "6             0  https://github.com/ISIC_9472515  ISIC_7730937             1   \n",
-      "7             0  https://github.com/ISIC_5332605  ISIC_5272223             1   \n",
-      "8             1  https://github.com/ISIC_5581297  ISIC_9152137             0   \n",
-      "9             0  https://github.com/ISIC_0632512  ISIC_1404148             0   \n",
+      "                                          image1_url  image2_title  \\\n",
+      "0  https://github.com/vcheplygina/crowdsim/blob/m...  ISIC_0504165   \n",
+      "1  https://github.com/vcheplygina/crowdsim/blob/m...  ISIC_6613150   \n",
+      "2  https://github.com/vcheplygina/crowdsim/blob/m...  ISIC_7332135   \n",
+      "3  https://github.com/vcheplygina/crowdsim/blob/m...  ISIC_6243521   \n",
+      "4  https://github.com/vcheplygina/crowdsim/blob/m...  ISIC_1698942   \n",
+      "5  https://github.com/vcheplygina/crowdsim/blob/m...  ISIC_6289835   \n",
+      "6  https://github.com/vcheplygina/crowdsim/blob/m...  ISIC_3023646   \n",
+      "7  https://github.com/vcheplygina/crowdsim/blob/m...  ISIC_7612992   \n",
+      "8  https://github.com/vcheplygina/crowdsim/blob/m...  ISIC_3738751   \n",
+      "9  https://github.com/vcheplygina/crowdsim/blob/m...  ISIC_2697083   \n",
       "\n",
-      "                        image3_url  \n",
-      "0  https://github.com/ISIC_4329544  \n",
-      "1  https://github.com/ISIC_8609756  \n",
-      "2  https://github.com/ISIC_4508878  \n",
-      "3  https://github.com/ISIC_6613150  \n",
-      "4  https://github.com/ISIC_8806647  \n",
-      "5  https://github.com/ISIC_4946006  \n",
-      "6  https://github.com/ISIC_7730937  \n",
-      "7  https://github.com/ISIC_5272223  \n",
-      "8  https://github.com/ISIC_9152137  \n",
-      "9  https://github.com/ISIC_1404148  \n"
+      "   image2_label                                         image2_url  \\\n",
+      "0             1  https://github.com/vcheplygina/crowdsim/blob/m...   \n",
+      "1             1  https://github.com/vcheplygina/crowdsim/blob/m...   \n",
+      "2             0  https://github.com/vcheplygina/crowdsim/blob/m...   \n",
+      "3             0  https://github.com/vcheplygina/crowdsim/blob/m...   \n",
+      "4             1  https://github.com/vcheplygina/crowdsim/blob/m...   \n",
+      "5             0  https://github.com/vcheplygina/crowdsim/blob/m...   \n",
+      "6             1  https://github.com/vcheplygina/crowdsim/blob/m...   \n",
+      "7             1  https://github.com/vcheplygina/crowdsim/blob/m...   \n",
+      "8             1  https://github.com/vcheplygina/crowdsim/blob/m...   \n",
+      "9             1  https://github.com/vcheplygina/crowdsim/blob/m...   \n",
+      "\n",
+      "   image3_title  image3_label  \\\n",
+      "0  ISIC_8951909             1   \n",
+      "1  ISIC_2386668             0   \n",
+      "2  ISIC_3444680             0   \n",
+      "3  ISIC_1104762             0   \n",
+      "4  ISIC_3590167             1   \n",
+      "5  ISIC_0861066             0   \n",
+      "6  ISIC_9493030             0   \n",
+      "7  ISIC_2560463             0   \n",
+      "8  ISIC_4794020             0   \n",
+      "9  ISIC_9612481             1   \n",
+      "\n",
+      "                                          image3_url  \n",
+      "0  https://github.com/vcheplygina/crowdsim/blob/m...  \n",
+      "1  https://github.com/vcheplygina/crowdsim/blob/m...  \n",
+      "2  https://github.com/vcheplygina/crowdsim/blob/m...  \n",
+      "3  https://github.com/vcheplygina/crowdsim/blob/m...  \n",
+      "4  https://github.com/vcheplygina/crowdsim/blob/m...  \n",
+      "5  https://github.com/vcheplygina/crowdsim/blob/m...  \n",
+      "6  https://github.com/vcheplygina/crowdsim/blob/m...  \n",
+      "7  https://github.com/vcheplygina/crowdsim/blob/m...  \n",
+      "8  https://github.com/vcheplygina/crowdsim/blob/m...  \n",
+      "9  https://github.com/vcheplygina/crowdsim/blob/m...  \n"
      ]
     }
    ],
@@ -112,17 +136,17 @@
     "X = 10\n",
     "#Find X random anchor pictures\n",
     "df_temp_anchor[[\"image1_title\", \"image1_label\"]] = df_anchor[[\"image_id\", \"cancer\"]].sample(n=X)\n",
-    "df_temp_anchor[[\"image1_url\"]] = \"https://github.com/\" + df_temp_anchor[[\"image1_title\"]].values\n",
+    "df_temp_anchor[[\"image1_url\"]] = \"https://github.com/vcheplygina/crowdsim/blob/main/Extra/Data/batch/\" + df_temp_anchor[[\"image1_title\"]].values + \".jpg?raw=true\"\n",
     "\n",
     "#Find X*2 random and different pictures\n",
     "df_temp_unlabeled_big = df_unlabeled[[\"image_id\", \"cancer\"]].sample(n=X*2)\n",
     "\n",
     "# Split into 2 groups of X\n",
     "df_temp_unlabeled_A[[\"image2_title\", \"image2_label\"]] = df_temp_unlabeled_big[0:X]\n",
-    "df_temp_unlabeled_A[[\"image2_url\"]] = \"https://github.com/\" + df_temp_unlabeled_A[[\"image2_title\"]].values\n",
+    "df_temp_unlabeled_A[[\"image2_url\"]] = \"https://github.com/vcheplygina/crowdsim/blob/main/Extra/Data/batch/\" + df_temp_unlabeled_A[[\"image2_title\"]].values + \".jpg?raw=true\"\n",
     "\n",
     "df_temp_unlabeled_B[[\"image3_title\", \"image3_label\"]] = df_temp_unlabeled_big[X:X*2]\n",
-    "df_temp_unlabeled_B[[\"image3_url\"]] = \"https://github.com/\" + df_temp_unlabeled_B[[\"image3_title\"]].values\n",
+    "df_temp_unlabeled_B[[\"image3_url\"]] = \"https://github.com/vcheplygina/crowdsim/blob/main/Extra/Data/batch/\" + df_temp_unlabeled_B[[\"image3_title\"]].values + \".jpg?raw=true\"\n",
     "\n",
     "#\n",
     "## Then we reset their indices, and join them \"horisontally\"\n",
