--- a/Extra/Data/create_unlabeled.ipynb
+++ b/Extra/Data/create_unlabeled.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "dc665159-3d5f-4162-8568-14b09310846e",
    "metadata": {
     "tags": []
@@ -207,7 +207,7 @@
        "[33126 rows x 8 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "a7c6aec6-067c-40da-92aa-06a2e122cfef",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "4407d9b2-f253-41a6-8de9-63c6cad5a9f0",
    "metadata": {},
    "outputs": [
@@ -261,28 +261,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>29929</th>\n",
-       "      <td>ISIC_9052604</td>\n",
+       "      <th>19968</th>\n",
+       "      <td>ISIC_6065301</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16247</th>\n",
-       "      <td>ISIC_4968388</td>\n",
+       "      <th>29054</th>\n",
+       "      <td>ISIC_8791321</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16467</th>\n",
-       "      <td>ISIC_5040726</td>\n",
+       "      <th>22031</th>\n",
+       "      <td>ISIC_6671773</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14407</th>\n",
+       "      <td>ISIC_4414841</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>717</th>\n",
-       "      <td>ISIC_0317589</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11691</th>\n",
-       "      <td>ISIC_3599367</td>\n",
+       "      <th>23034</th>\n",
+       "      <td>ISIC_6997436</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -291,28 +291,28 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9220</th>\n",
-       "      <td>ISIC_2859888</td>\n",
+       "      <th>4746</th>\n",
+       "      <td>ISIC_1522266</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5042</th>\n",
-       "      <td>ISIC_1615215</td>\n",
+       "      <th>22088</th>\n",
+       "      <td>ISIC_6688054</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16229</th>\n",
-       "      <td>ISIC_4964586</td>\n",
+       "      <th>16794</th>\n",
+       "      <td>ISIC_5136890</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2902</th>\n",
-       "      <td>ISIC_0966066</td>\n",
+       "      <th>12976</th>\n",
+       "      <td>ISIC_3992996</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27735</th>\n",
-       "      <td>ISIC_8393310</td>\n",
+       "      <th>19579</th>\n",
+       "      <td>ISIC_5944524</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -322,22 +322,22 @@
       ],
       "text/plain": [
        "           image_id  cancer\n",
-       "29929  ISIC_9052604       0\n",
-       "16247  ISIC_4968388       0\n",
-       "16467  ISIC_5040726       0\n",
-       "717    ISIC_0317589       0\n",
-       "11691  ISIC_3599367       0\n",
+       "19968  ISIC_6065301       0\n",
+       "29054  ISIC_8791321       0\n",
+       "22031  ISIC_6671773       1\n",
+       "14407  ISIC_4414841       0\n",
+       "23034  ISIC_6997436       0\n",
        "...             ...     ...\n",
-       "9220   ISIC_2859888       0\n",
-       "5042   ISIC_1615215       0\n",
-       "16229  ISIC_4964586       0\n",
-       "2902   ISIC_0966066       0\n",
-       "27735  ISIC_8393310       0\n",
+       "4746   ISIC_1522266       0\n",
+       "22088  ISIC_6688054       0\n",
+       "16794  ISIC_5136890       0\n",
+       "12976  ISIC_3992996       0\n",
+       "19579  ISIC_5944524       0\n",
        "\n",
        "[33126 rows x 2 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "263cdfb5-133f-475b-b254-91c922964c9e",
    "metadata": {},
    "outputs": [],
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "cce90ab9-bd04-46e2-a3de-a6eab6faea3b",
    "metadata": {},
    "outputs": [
@@ -370,50 +370,51 @@
      "output_type": "stream",
      "text": [
       "           image_id  cancer\n",
-      "21408  ISIC_6496370       1\n",
-      "1335   ISIC_0504165       1\n",
-      "12795  ISIC_3941123       1\n",
-      "20547  ISIC_6251753       1\n",
-      "9151   ISIC_2837581       1\n",
+      "21557  ISIC_6541615       1\n",
+      "758    ISIC_0333091       1\n",
+      "11644  ISIC_3590167       1\n",
+      "21916  ISIC_6634951       1\n",
+      "20612  ISIC_6269166       1\n",
       "...             ...     ...\n",
-      "16622  ISIC_5086349       1\n",
-      "10149  ISIC_3144222       1\n",
-      "22520  ISIC_6829008       1\n",
-      "2542   ISIC_0862745       1\n",
-      "11920  ISIC_3673080       1\n",
+      "32301  ISIC_9754098       1\n",
+      "1288   ISIC_0489267       1\n",
+      "22862  ISIC_6945634       1\n",
+      "9984   ISIC_3097354       1\n",
+      "8972   ISIC_2787702       1\n",
       "\n",
-      "[100 rows x 2 columns]\n",
+      "[250 rows x 2 columns]\n",
       "           image_id  cancer\n",
-      "26979  ISIC_8174925       0\n",
-      "31346  ISIC_9472515       0\n",
-      "4269   ISIC_1388032       0\n",
-      "16159  ISIC_4946006       0\n",
-      "25714  ISIC_7803114       0\n",
+      "26342  ISIC_7991932       0\n",
+      "16653  ISIC_5096556       0\n",
+      "1990   ISIC_0694033       0\n",
+      "10714  ISIC_3304982       0\n",
+      "13153  ISIC_4044272       0\n",
       "...             ...     ...\n",
-      "1290   ISIC_0489729       0\n",
-      "25875  ISIC_7847181       0\n",
-      "15687  ISIC_4794020       0\n",
-      "16842  ISIC_5149730       0\n",
-      "21498  ISIC_6524119       0\n",
+      "8582   ISIC_2676009       0\n",
+      "7695   ISIC_2400548       0\n",
+      "7259   ISIC_2273490       0\n",
+      "12739  ISIC_3923443       0\n",
+      "11839  ISIC_3645705       0\n",
       "\n",
-      "[100 rows x 2 columns]\n"
+      "[250 rows x 2 columns]\n"
      ]
     }
    ],
    "source": [
-    "## Pick 100 random images where cancer = 1, and 100 where cancer = 0\n",
+    "## Pick X random images where cancer = 1, and X where cancer = 0\n",
     "## First part with .loc is a \"where-statement\", and sample(100) takes 100 items at random from the random list\n",
-    "df_sample_cancer = df_random.loc[(df_random[\"cancer\"] == 1)].sample(100)\n",
+    "size_X = 250\n",
+    "df_sample_cancer = df_random.loc[(df_random[\"cancer\"] == 1)].sample(size_X)\n",
     "print(df_sample_cancer)\n",
     "\n",
     "## Same as above, but with no_cancer\n",
-    "df_sample_no_cancer = df_random.loc[(df_random[\"cancer\"] == 0)].sample(100)\n",
+    "df_sample_no_cancer = df_random.loc[(df_random[\"cancer\"] == 0)].sample(size_X)\n",
     "print(df_sample_no_cancer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "abc5f255-f9f8-49d3-947f-2963bf7f5b87",
    "metadata": {},
    "outputs": [
@@ -444,28 +445,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>21408</th>\n",
-       "      <td>ISIC_6496370</td>\n",
+       "      <th>21557</th>\n",
+       "      <td>ISIC_6541615</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1335</th>\n",
-       "      <td>ISIC_0504165</td>\n",
+       "      <th>758</th>\n",
+       "      <td>ISIC_0333091</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12795</th>\n",
-       "      <td>ISIC_3941123</td>\n",
+       "      <th>11644</th>\n",
+       "      <td>ISIC_3590167</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20547</th>\n",
-       "      <td>ISIC_6251753</td>\n",
+       "      <th>21916</th>\n",
+       "      <td>ISIC_6634951</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9151</th>\n",
-       "      <td>ISIC_2837581</td>\n",
+       "      <th>20612</th>\n",
+       "      <td>ISIC_6269166</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -474,53 +475,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1290</th>\n",
-       "      <td>ISIC_0489729</td>\n",
+       "      <th>8582</th>\n",
+       "      <td>ISIC_2676009</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25875</th>\n",
-       "      <td>ISIC_7847181</td>\n",
+       "      <th>7695</th>\n",
+       "      <td>ISIC_2400548</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15687</th>\n",
-       "      <td>ISIC_4794020</td>\n",
+       "      <th>7259</th>\n",
+       "      <td>ISIC_2273490</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16842</th>\n",
-       "      <td>ISIC_5149730</td>\n",
+       "      <th>12739</th>\n",
+       "      <td>ISIC_3923443</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21498</th>\n",
-       "      <td>ISIC_6524119</td>\n",
+       "      <th>11839</th>\n",
+       "      <td>ISIC_3645705</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>200 rows × 2 columns</p>\n",
+       "<p>500 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "           image_id  cancer\n",
-       "21408  ISIC_6496370       1\n",
-       "1335   ISIC_0504165       1\n",
-       "12795  ISIC_3941123       1\n",
-       "20547  ISIC_6251753       1\n",
-       "9151   ISIC_2837581       1\n",
+       "21557  ISIC_6541615       1\n",
+       "758    ISIC_0333091       1\n",
+       "11644  ISIC_3590167       1\n",
+       "21916  ISIC_6634951       1\n",
+       "20612  ISIC_6269166       1\n",
        "...             ...     ...\n",
-       "1290   ISIC_0489729       0\n",
-       "25875  ISIC_7847181       0\n",
-       "15687  ISIC_4794020       0\n",
-       "16842  ISIC_5149730       0\n",
-       "21498  ISIC_6524119       0\n",
+       "8582   ISIC_2676009       0\n",
+       "7695   ISIC_2400548       0\n",
+       "7259   ISIC_2273490       0\n",
+       "12739  ISIC_3923443       0\n",
+       "11839  ISIC_3645705       0\n",
        "\n",
-       "[200 rows x 2 columns]"
+       "[500 rows x 2 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,19 +534,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "b0cfdb69-0b88-4bed-ba99-a89a4654e85e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "image_id    200\n",
+       "image_id    500\n",
        "cancer        2\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "ec14b3ea-d738-4305-912c-17872ff1c7e7",
    "metadata": {},
    "outputs": [],
